		question does not really exist that the tool is pointing to... that made the tool return a double error instead of 
		just dying on the first one.
		-The tool will now accept a separate output timezone so the tool can output in a different timezone than the hosts one.
	- [log2timeline] Added the -Z ZONE parameter so the tool can output in a different timezone than the host timezone.
	- [CSV output] Changed the output timezone so it now prints using the -Z definition, so it now supports different output
	timezone than the host one.
	- [EVTX input] Fixed a bug in where the tool could go into a endless loop in the case where you have a EVTX that is 
	somehow broken and the function get_next_event dies. If the tool runs into such occurance it returned an empty
	timestamp object, that in turn let the tool query for it again, thus possibly getting into an endless loop.
	Added a counter so the tool tries to get the next event 50 times, otherwise it will die.
	- [log2timeline-sift] Moved the mount command out of the script and into the configuration file 
		- Changed the mount command, since there were few errors with the previous one
		- Added an addional check to see if the $MFT file can be directly called (and if so, skip the icat call)

Version 0.61 (26/09/2011)
	- [log2timeline] Small changes to the version printing (now prints just the last portion of the path)
		- Now the engine checks if the format field is set and omits it if its set (to facilitate input modules like CSV that define it)
		- Changed the list modules, added the SAM database readout in the winxp and win7 list files.
		- Created the winsrv list file
		- Added the MFT module to all windows list files (just in case they use a driver that displays the $MFT file)
		- Fixed an issue with the tool not accepting the described format of the offset variable (should be +- int with the appended hms (optional))
		- Added a try/catch around get_time, http://bugs.log2timeline.net/show_bug.cgi?id=2